Wed May  8 13:06:31 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (ISGRAPH): add missing macro.

Wed May  8 06:42:56 2013  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/socket/socket.c (socket_s_ip_address_list): fix wrongly filled
	  sin6_scope_id on KAME introduced by r40593 for OpenIndiana.
	  KAME uses fe80:<scope_id>::<interface id> for link-local address
	  internally.
	  Setting sin6_scope_id causes it leaked.
	  see also comments of sockaddr_obj().

Tue May  7 22:12:34 2013  Tanaka Akira  <akr@fsij.org>

	* ext/readline/readline.c (insert_ignore_escape): Add a cast to
	  unsigned char * before dereference.
	  This suppress a warning on Cygwin.

Tue May  7 12:15:24 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (bsock_recvmsg_internal): Add a cast to
	  suppress warning.
	  Bionic defines socklen_t as int.
	  Bionic defines msg_controllen as unsigned int (__kernel_size_t)
	  instead of socklen_t as POSIX.

Tue May  7 12:12:42 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (ancillary_inspect): Don't call
	  anc_inspect_ipv6_pktinfo if !HAVE_TYPE_STRUCT_IN6_PKTINFO.
	  anc_inspect_ipv6_pktinfo is not defined in the case.

Tue May  7 12:10:52 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (socket_s_ip_address_list): Cast EXTRA_SPACE as
	  int.  This suppress a warning.

Tue May  7 12:09:29 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/extconf.rb: Set close_fds false for Cygwin.
	  Cygwin doesn't support fd passing.
	  This enables socket extension library cross-compilable by default.

Tue May  7 12:07:35 2013  Tanaka Akira  <akr@fsij.org>

	* pack.c (swap32): Don't redefine it if it is already defined.
	  Bionic defines it.
	  (swap64): Ditto.

Mon May  6 20:50:37 2013  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (socket_s_ip_address_list): Fill sin6_scope_id
	  if getifaddrs() returns an IPv6 link local address which
	  sin6_scope_id is zero, such as on OpenIndiana SunOS 5.11.
